[package]
name = "ce-conformance-rust"
version = "0.0.0"
edition = "2024"
publish = false

# The Rust conformance runner drives the ce-rs SDK through the shared Tier-A scenario contract.
# ce-rs is depended on by path to the sibling working tree (like the Go runner's local replace),
# so the runner exercises local WIP; a standalone checkout would switch this to the git dep.
[dependencies]
ce-rs = { path = "../../../ce-rs" }
ce-economy = { git = "https://github.com/ce-net/economy-adapter" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures-util = "0.3"
anyhow = "1"
hex = "0.4"
serde_json = "1"
