[package]
name = "ce-conformance-rust"
version = "0.0.0"
edition = "2024"
publish = false

# The Rust conformance runner drives the ce-rs SDK through the shared Tier-A scenario contract.
# ce-rs is a github git dep, so a fresh standalone clone builds against the published SDK; in a
# full local workspace checkout, tools/ce-dev-link generates a git-excluded [patch] config that
# points it at the sibling working tree so the runner exercises local WIP.
[dependencies]
ce-rs = { git = "https://github.com/ce-net/ce-rs" }
ce-economy = { git = "https://github.com/ce-net/economy-adapter" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures-util = "0.3"
anyhow = "1"
hex = "0.4"
serde_json = "1"
